updated navbar menu, geosites and contact us

--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,9 @@ body {
 }
 
 .indicator-line {
-  @apply h-1 w-px rounded-full bg-white transition-all duration-200 ease-in-out;
+  /* @apply h-1 w-px rounded-full bg-white transition-all duration-200 ease-in-out; */
+  @apply h-1 w-px rounded-full transition-all duration-200 ease-in-out;
+  background-color: #228B22;
 }
 
 .indicator-line.active {
